# ElasticSearch-RDSL

./: .gitignore  README.md  pyproject.toml  setup.cfg
elasticsearch_rdsl/: __init__.py  exceptions.py
elasticsearch_rdsl/_async/: documents.py  registries.py
tests/: test.py  test_core.py
