[project]
name = "elasticsearch_rdsl"
version = "0.1.0"
description = "ElasticSearch DSL module with relationship layer"
authors = [{name="Kamil Skop", email="kamil.skop.tau@gmail.com"}]
license = "MIT"
dependencies = [
    "elasticsearch==9.0.1"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
